Add Project C as module of MainProject and dependency to ProjectB

--- a/MainProject/pom.xml
+++ b/MainProject/pom.xml
@@ -22,8 +22,10 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
   <modules>
   	<module>ProjectB</module>
+  	<module>ProjectC</module>
   </modules>
   
 </project>
