Add ProjectD as module of MainProject and dependency to ProjectC

--- a/MainProject/ProjectD/pom.xml
+++ b/MainProject/ProjectD/pom.xml
@@ -9,21 +9,19 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
 
-  <artifactId>ProjectC</artifactId>
-  <name>ProjectC</name>
+  <artifactId>ProjectD</artifactId>
+  <name>ProjectD</name>
   <url>http://maven.apache.org</url>
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   
-    
   <dependencies>
     <dependency>
       <groupId>com.fmi</groupId>
-      <artifactId>ProjectB</artifactId>
+      <artifactId>ProjectC</artifactId>
       <version>0.0.1-SNAPSHOT</version>
-      <type>war</type>
     </dependency>
   </dependencies>
   
