--- a/MainProject/ProjectB/pom.xml
+++ b/MainProject/ProjectB/pom.xml
@@ -18,6 +18,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   
+  <dependencies>
+  	<dependency>
+  		<groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+  	</dependency>
+  </dependencies>
+  
   <build>
     <plugins>
         <plugin>
