--- a/MainProject/ProjectD/pom.xml
+++ b/MainProject/ProjectD/pom.xml
@@ -15,15 +15,21 @@
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  
-  <!--
-  <dependencies>
-    <dependency>
-      <groupId>com.fmi</groupId>
-      <artifactId>ProjectC</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-  </dependencies>
-    -->
+  </properties>  
+
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>com.fmi</groupId>
+  			<artifactId>MainProject</artifactId>
+  			<exclusions>
+  				<exclusion>
+  					<groupId>junit</groupId>
+  					<artifactId>junit</artifactId>
+  				</exclusion>
+  			</exclusions>
+  		</dependency>
+  	</dependencies>
+  </dependencyManagement>
+
 </project>
